--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(../IMGmicrosoft/4_eae2dd7eb3a55636dc2d74f4fa4c386e.svg);
+    background-image: url(IMGmicrosoft/4_eae2dd7eb3a55636dc2d74f4fa4c386e.svg);
    
 
 }
@@ -88,4 +88,5 @@ button {
     width: 32px;
     height: 32px;
 }
+
 
